users/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-users-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: first-users
  template:
    metadata:
      labels:
        app: first-users
    spec:
      containers:
      - name: first-users
        image: snmmaurya/first-users:latest
        resources:
          requests:
            cpu: 200m
            memory: 250Mi
          limits:
            cpu: 1M
            memory: 1Gi
        ports:
        - containerPort: 3000
