users/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: first-users-service
spec:
  selector: # select the pod
    app: first-users
  type: NodePort
  ports:
  - port: 30000
    targetPort: 3000
